fixed bug where 'Settings' text is too small on mobile

--- a/src/components/ColorSelector.css
+++ b/src/components/ColorSelector.css
@@ -33,6 +33,9 @@ label {
   top: 0;
   z-index: 100;
 }
+.settings-string {
+    font-size: 13px;
+}
 
 @media only screen and (min-width: 600px) {
   .instruction-text {
